--- a/src/main/webapp/resources/css/card.css
+++ b/src/main/webapp/resources/css/card.css
@@ -1,4 +1,5 @@
 .cards-container {
+  z-index: 1003; /* 헤더 및 컨텐츠보다 앞서서 보이도록 설정 */
     display: flex;
     flex-wrap: wrap;
     gap: 1.5rem;
@@ -8,6 +9,7 @@
 }
 
 .card {
+  z-index: 1003; /* 헤더 및 컨텐츠보다 앞서서 보이도록 설정 */
     width: 18rem;
     height: 28rem;
     padding: 0;
